# python-cdk-starter

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  TODO.md  app.py  app_dev.py  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/: handlers.py
cdk/: code_pipeline.py  config.py
cdk/constructs/: api.py
tests/: test_apps.py
